# st-visium-datasets

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
examples/: load_visium_datasets.ipynb
scripts/: generate_configs.py
src/st_atlas_datasets/: __init__.py  base.py  load.py  settings.py  spot.py  utils.py  version.py
src/st_atlas_datasets/configs/: cytassist-11mm-ffpe-human-colorectal-cancer-2-0-1.json  cytassist-11mm-ffpe-human-glioblastoma-2-0-1.json  cytassist-11mm-ffpe-human-kidney-2-0-1.json  cytassist-11mm-ffpe-human-lung-cancer-2-0-1.json  cytassist-11mm-ffpe-human-ovarian-carcinoma-2-0-0.json  cytassist-11mm-ffpe-mouse-embryo-2-0-0.json  cytassist-11mm-ffpe-mouse-embryo-2-1-0.json  cytassist-11mm-ffpe-mouse-tma-3x3-1mm-2-0-1.json  cytassist-11mm-ffpe-mouse-tma-5x5-1mm-2-0-1.json  cytassist-ffpe-human-colon-post-xenium-rep1-2-1-0.json  cytassist-ffpe-human-colon-post-xenium-rep2-2-1-0.json  cytassist-ffpe-human-colon-rep1-2-1-0.json  cytassist-ffpe-human-colon-rep2-2-1-0.json  cytassist-ffpe-human-lung-squamous-cell-carcinoma-2-0-0.json  cytassist-ffpe-human-skin-melanoma-2-0-0.json  cytassist-ffpe-mouse-brain-rep1-2-0-0.json  cytassist-ffpe-mouse-brain-rep2-2-0-0.json  cytassist-ffpe-sagittal-mouse-brain-2-0-1.json  cytassist-ffpe-sagittal-mouse-brain-2-1-0.json  cytassist-fixed-frozen-sagittal-mouse-brain-2-0-1.json  cytassist-fixed-frozen-sagittal-mouse-brain-2-1-0.json  cytassist-fresh-frozen-human-breast-cancer-2-0-1.json  cytassist-fresh-frozen-mouse-brain-2-0-1.json  cytassist-fresh-frozen-mouse-brain-post-xenium-rep1-2-1-0.json  cytassist-fresh-frozen-mouse-brain-post-xenium-rep2-2-1-0.json  cytassist-fresh-frozen-mouse-brain-rep1-2-1-0.json  cytassist-fresh-frozen-mouse-brain-rep2-2-1-0.json  (+56 more)
st_visium_datasets/: __init__.py  base.py  builder.py  config.py  data_file.py  load.py  settings.py  utils.py
st_visium_datasets/utils/: download.py  utils.py
st_visium_datasets/visium/: visium.py
(+136 files in other folders)
