[tool.poetry]
name = "st-atlas-datasets"
version = "0.1.0"
description = ""
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "st_atlas_datasets", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.1"
rich = "^13.6.0"
anyio = "^4.0.0"
datasets = "^2.14.6"
pillow = "^10.1.0"
tifffile = {extras = ["all"], version = "^2023.9.26"}
pyfastx = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.isort]
known-first-party = ["st_atlas_datasets"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -vv --cov=src/st_atlas_datasets --cov-report=term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 90
